# NeMo

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  Makefile.in  README.in  antbuild.xml  client.mk  configure  configure.ac  cuda.mk  cuda.mk.in  cuda_common.mk  description.txt  nemo.buildinfo.in  nemo.cabal
doc/: CMakeLists.txt  source.doxy.in
doc/api_html/: CMakeLists.txt
doc/dev_html/: CMakeLists.txt
doc/man/: CMakeLists.txt  Doxyfile.in
doc/man/man3/: nemo-c.3  nemo-cpp.3  nemo_Configuration.3  nemo_Network.3  nemo_Simulation.3
doc/manual/: .gitignore  CMakeLists.txt  Makefile  example.m  manual.bib  manual.tex  title.tex.in
doc/manual/src/: example.m  example.py  manual.bib  manual.tex
doc/wiki/: BugList  ClientServerArchitecture  EfficientNetworkConstruction  HaskellCodingStyle  HaskellRandomisation  HomePage  IssueList  LowLevelAPI  MatlabAPI  MultipleParallelSimulations  PythonAPI  StoreExplicitFiringIndices  SystemOverview
libnemo/: CMakeLists.txt  README  nemo.h  nemo.hpp
libnemo/CMake/cuda/: FindCUDA.cmake
libnemo/api/: CMakeLists.txt
libnemo/api/autogen/: API.hs  C.hs  Common.hs  Latex.hs  Main.hs  Matlab.hs  Python.hs
libnemo/api/matlab/: CMakeLists.txt  example.m  install.cmake  nemo.m  nemoNetwork.m  (+29 more)
libnemo/base/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  ConfigurationImpl.cpp  ConfigurationImpl.hpp  ConnectivityMatrix.cpp  ConnectivityMatrix.hpp  Network.cpp  Network.hpp  NetworkImpl.cpp  NetworkImpl.hpp  STDP.hpp  STDP.ipp  Simulation.cpp  Simulation.hpp  SimulationBackend.cpp  SimulationBackend.hpp  Timer.hpp  exception.hpp  fixedpoint.cpp  fixedpoint.hpp  nemo.cpp  nemo.h  nemo.hpp  nemo_c.cpp  nemo_config.h.in  nemo_error.h  nemo_internal.hpp  types.h  types.hpp
libnemo/doc/: CMakeLists.txt  Doxyfile.in  man.doxy.in
libnemo/examples/: CMakeLists.txt  common.cpp  common.hpp  examples.hpp  random.cpp  random1k.cpp  sim_runner.cpp  sim_runner.hpp  torus.cpp
libnemo/include/: CMakeLists.txt  Configuration.hpp  Network.hpp  nemo_config.h.in
libnemo/mpi/: CMakeLists.txt  Mapper.cpp  Mapper.hpp  Master.cpp  Master.hpp  MpiTimer.hpp  SpikeQueue.cpp  SpikeQueue.hpp  Worker.cpp  Worker.hpp  example.cpp  log.hpp  mpi_types.hpp  nemo_mpi.hpp  nemo_mpi_common.hpp
libnemo/nemo/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  ConfigurationImpl.cpp  ConfigurationImpl.hpp  ConnectivityMatrix.cpp  ConnectivityMatrix.hpp  FiringBuffer.cpp  FiringBuffer.hpp  Mapper.hpp  Network.cpp  Network.hpp  NetworkImpl.cpp  NetworkImpl.hpp  OutgoingDelays.cpp  OutgoingDelays.hpp  RNG.cpp  RNG.hpp  STDP.cpp  STDP.hpp  STDP.ipp  Simulation.hpp  SimulationBackend.cpp  SimulationBackend.hpp  StdpFunction.hpp  Timer.hpp  bitops.h  config.h.in  constants.h  dyn_load.cpp  dyn_load.hpp  errors.h  exception.hpp  fixedpoint.hpp  internal_types.h  internals.hpp  nemo.cpp  nemo_c.cpp  nemo_config.h.in  nemo_internal.hpp  (+2 more)
libnemo/src/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  ConfigurationImpl.cpp  Connectivity.cpp  Connectivity.hpp  ConnectivityMatrix.cpp  ConnectivityMatrix.hpp  ConnectivityMatrixImpl.cpp  ConnectivityMatrixImpl.hpp  CudaNetwork.cpp  CudaNetwork.hpp  CudaSimulation.cpp  CudaSimulation.hpp  CudaSimulationImpl.cpp  CudaSimulationImpl.hpp  CycleCounters.cpp  CycleCounters.hpp  DeviceAssertions.cpp  DeviceAssertions.hpp  DeviceIdx.hpp  Doxyfile  Doxyfile.in  FiringOutput.cpp  FiringOutput.hpp  Incoming.cpp  Incoming.hpp  Mapper.cpp  Mapper.hpp  NVector.hpp  NVector.ipp  Network.cpp  Network.hpp  NetworkImpl.cpp  NetworkImpl.hpp  NeuronParameters.cpp  NeuronParameters.hpp  Outgoing.cpp  Outgoing.hpp  RSMatrix.cpp  (+66 more)
libnemo/test/: CMakeLists.txt  create_rtest_data.cpp  mpi_test.cpp  networks.cpp  rtest.cpp  rtest.hpp  serialisation.cpp  stdp.cpp  test.cpp  test.hpp  test_c_api.cpp  utils.cpp  utils.hpp
src/: .gitignore  Benchmark.hs  CMakeLists.txt  Construction.hs  ExternalClient.hs  IzhikevichServer.hs  NSim.hs  Nemo.hs  Options.hs  Protocol.hs  RunNetwork.hs  Server.hs  Simulation.hs  Types.hs  nemo.h  nemo.hpp
src/Construction/: Axon.hs  Connectivity.hs  Construction.hs  Izhikevich.hs  Network.hs  Neuron.hs  Neurons.hs  Parameterisation.hs  Rand.hs  Spiking.hs  Synapse.hs  Topology.hs
src/Examples/: Random1k.hs  Random1kRun.hs  Ring.hs  RingRun.hs  Smallworld.hs  SmallworldRun.hs
src/ExternalClient/: nemo.thrift
src/Network/: Client.hs  ClientFFI.hs  Protocol.hs  Server.hs  SocketSerialisation.hs
src/Simulation/: Backend.hs  CPU.hs  CUDA.hs  Common.hs  CommonFFI.hs  FileSerialisation.hs  FiringStimulus.hs  Options.hs  Pipelined.hs  Queue.hs  Remote.hs  Run.hs  STDP.hs  SpikeQueue.hs  Statistics.hs
src/Util/: Assocs.hs  List.hs
src/api/: CMakeLists.txt
src/app/: CMakeLists.txt  nemo.cpp
src/client-api/: .gitignore  args.c  args.h  client.c  client.h  error.c  error.h  hsping.c  nemoGetConnectivity_aux.c  nemoRun_aux.c  nemoStart_aux.c  nemoTerminate_aux.c  nsRun_aux.c  nsStart_aux.c
src/doc/: man.doxy.in
src/examples/: CMakeLists.txt  common.cpp  common.hpp  examples.hpp  kuramoto.cpp  random.cpp  torus.cpp
src/gui/: .gitignore  FiringPlot.cpp  FiringPlot.hpp  main.cpp
src/mpi/: CMakeLists.txt  Master.hpp  Worker.cpp  example.cpp  types.hpp
src/nemo/: Axon.cpp  Axon.hpp  CMakeLists.txt  Configuration.cpp  Configuration.hpp  ConfigurationImpl.cpp  ConfigurationImpl.hpp  ConnectivityMatrix.cpp  ConnectivityMatrix.hpp  Network.cpp  Network.hpp  NetworkImpl.cpp  NetworkImpl.hpp  Neuron.cpp  Neuron.hpp  NeuronType.cpp  NeuronType.hpp  Neurons.cpp  Neurons.hpp  OutgoingDelays.cpp  OutgoingDelays.hpp  Plugin.cpp  Plugin.hpp  RNG.cpp  RNG.hpp  RandomMapper.hpp  ReadableNetwork.hpp  STDP.cpp  STDP.hpp  Simulation.cpp  Simulation.hpp  SimulationBackend.cpp  SimulationBackend.hpp  StdpFunction.cpp  StdpFunction.hpp  Timer.hpp  config.h.in  dyn_load.cpp  dyn_load.hpp  fixedpoint.hpp  (+6 more)
src/test/: CMakeLists.txt  Input.cpp  Kuramoto.cpp  PoissonSource.cpp  c_api.cpp  c_api.hpp  rtest.cpp  stdp.cpp  test.cpp  test_c_api.cpp  utils.cpp  utils.hpp
src/thrift/: nemo.thrift
src/visualization/: connectivity.py
(+544 files in other folders)
