name:                       nemo
version:                    0.4.23
synopsis:                   Spiking neural network simulator
author:                     Andreas Fidjeland
maintainer:                 Andreas Fidjeland <andreas.fidjeland@imperial.ac.uk>
cabal-version:              >= 1.2
stability:                  alpha
build-type:                 Simple

extra-source-files:         configure, conf/version, cuda.mk.in nemo.buildinfo.in
extra-tmp-files:            nemo.buildinfo, cuda.mk, config.status, config.log


-- TODO: use autoconf to find Matlab
flag Matlab
    description:            Enable support for Matlab client
    default:                False

flag Debug
    description:            Enable debugging
    default:                False

flag Examples
    description:            Build stand-alone example networks
    default:                False

flag Test
    description:            Create binary which runs all the tests
    default:                False

flag Benchmark
    description:            Create binary which runs benchmarks
    default:                False

flag Single
    description:            Use single-precisison floating points in the CPU backend
    default:                False

flag ProfileCPU
    description:            Profile the c-based CPU backend
    default:                False


executable nemo
    main-is:                Nemo.hs
    other-modules:          Construction,
                            Construction.Axon,
                            Construction.Construction,
                            Construction.Izhikevich,
                            Construction.Network,
                            Construction.Neuron,
                            Construction.Neurons,
                            Construction.Parameterisation,
                            Construction.Rand,
                            Construction.Randomised.Topology,
                            Construction.Randomised.Synapse,
                            Construction.Synapse,
                            Construction.Topology,
                            ExternalClient,
                            NemoBackend_Client,
                            Options,
                            Protocol,
                            Server,
                            Simulation,
                            Simulation.Backend,
                            Simulation.CommonFFI,
                            Simulation.CPU,
                            Simulation.CPU.KernelFFI,
                            Simulation.CUDA.Options,
                            Simulation.FiringStimulus,
                            Simulation.Options,
                            Simulation.Queue,
                            Simulation.Pipelined,
                            Simulation.Remote,
                            Simulation.Run,
                            Simulation.SpikeQueue,
                            Simulation.Statistics,
                            Simulation.STDP,
                            Simulation.STDP.Options,
                            Types,
                            Util.Assocs

    -- CPU simulation kernel written in C
    include-dirs:           src/Simulation/CPU/kernel
                            src/Simulation/common
    c-sources:              src/Simulation/CPU/kernel/cpu_kernel.cpp
                            src/Simulation/CPU/kernel/Network.cpp
                            src/Simulation/CPU/kernel/ConnectivityMatrix.cpp
                            src/Simulation/CPU/kernel/RNG.cpp
    extra-libraries:        stdc++

    if flag(Debug)
        cc-options:         -g
    else
        cc-options:         -DNDEBUG

    if flag(Single)
        cpp-options:        -DCPU_SINGLE_PRECISION
        cc-options:         -DCPU_SINGLE_PRECISION

    if flag(ProfileCPU)
        cc-options:         -pg
        ghc-options:        -optl=-pg

    if flag(Benchmark)
        other-modules:      Benchmark,
                            Examples.Ring,
                            Examples.Random1k
        cpp-options:        -DBENCHMARK_ENABLED

    if flag(Test)
        other-modules:      Test.RunTests,
                            Test.Comparative,
                            Test.Construction.Axon,
                            Test.Construction.Synapse,
                            Test.Examples.Dense,
                            Test.Examples.Random1k,
                            Test.Examples.Ring,
                            Test.Examples.Smallworld,
                            Test.Files,
                            Test.Network.Client,
                            Test.Regression,
                            Test.Simulation.Run,
                            Examples.Smallworld,
                            Examples.Random1k

        hs-source-dirs:     testsuite
        build-depends:      HUnit, filepath, directory
        cpp-options:        -DTEST_ENABLED

        if flag(Matlab)
            other-modules:  Test.ClientAPI.Matlab

    if flag(Matlab)
        cpp-options:        -DMATLAB_ENABLED

    -- We have several example scripts. These should really be replaced by scripts
    -- which are loaded dynamically by the main nemo binary.
    if flag(examples)
        other-modules:      Examples.Random1k,
                            Examples.Random1kRun,
                            Examples.Ring,
                            Examples.RingRun,
                            Examples.Smallworld,
                            Examples.SmallworldRun,
                            NSim

        cpp-options:        -DEXAMPLES_ENABLED

    hs-source-dirs:         src, src/thrift/gen-hs

    build-depends:          array >= 0.1
    build-depends:          base
    build-depends:          containers
    build-depends:          haskell98
    build-depends:          mtl
    build-depends:          network
    build-depends:          old-time
    build-depends:          parallel
    build-depends:          QuickCheck < 2.0
    build-depends:          random
    build-depends:          Thrift
    if !os(windows)
        build-depends:      unix

    extensions:             DeriveDataTypeable

    ghc-options:            -threaded -O2

    if flag(debug)
        ghc-options:        -fno-ignore-asserts
